<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">task</string>
    <string name="click">Click</string>
    <string name="search">search</string>
    <string name="image">image</string>
    <string name="start_rxjava_stream">Start RxJava stream</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="your_id">Your Id</string>
    <string name="your_name">Your Name</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="clean">Clean</string>
    <string name="enter_id">Enter Id</string>
    <string name="id">id</string>
    <string name="clear">Clear</string>
    <string name="shared_data_demo">SHared Data Demo</string>
    <string name="add">add</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="android_development">Android Development</string>
    <string name="realm_has_open_source_sdks_available_for_most_popular_languages_frameworks_and_platforms">Realm has open-source SDKs available for most popular languages, frameworks, and platforms.</string>
    <string name="delete_all">Delete All</string>
    <string name="realm_demo">Realm Demo</string>
    <string name="insert_data">Insert Data</string>
    <string name="read_data">Read Data</string>
    <string name="update_data">Update Data</string>
    <string name="delete_data">Delete Data</string>
    <string name="user_id">user id</string>
    <string name="user_name">User name</string>
    <string name="user_email">user email</string>
    <string name="web_api_retrofit">Web api retrofit</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_job">Cancel job</string>
    <string name="job_scheduler">Job Scheduler</string>
    <string name="constraints">Constraints</string>
    <string name="connectivity">Connectivity</string>
    <string name="any">Any</string>
    <string name="unmetered">Unmetered</string>
    <string name="timing">Timing :</string>
    <string name="delay">Delay :</string>
    <string name="deadline">Deadline :</string>
    <string name="charging_caption">Charging caption</string>
    <string name="charging">Charging</string>
    <string name="idle_caption">Idle Caption</string>
    <string name="requires_device_in_idle_mode">Requires device in idle mode.</string>
    <string name="cancel_all">Cancel all</string>
    <string name="logo">logo</string>
    <string name="this_is_message">This is message</string>
    <string name="thanks_for_installing_our_application_this_is_an_api_notification">Thanks for installing our application.This is an Api notification</string>
    <string name="pick_image">Pick Image</string>
    <string name="cropped_image">cropped image</string>
    <string name="image_view">image view</string>
    <string name="touch_to_change_image">Touch to change image</string>
    <string name="crop_and_glide">Crop and Glide</string>
    <string name="capture_image">Capture Image</string>
    <string name="glide_crop">Glide crop</string>
    <string name="pick_image_to_view">Pick Image to View</string>
    <string name="thumbnail">thumbnail</string>
    <string name="play_icon">play icon</string>
    <string name="media_player">Media player</string>
    <string name="preview">preview</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="_00_00">00:00</string>
    <string name="loading_contacts">loading contacts</string>
    <string name="contact_viewer">contact\'s</string>
    <string name="import_contacts">import contacts</string>
    <string name="type_your_message_here">Type your message here…</string>
    <string name="add_contact_s">Add contact\'s…</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="send">Send</string>
    <string name="sms_contacts">SMS Contacts</string>
    <string name="profile_image">Profile Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="calender">Calender</string>
    <string name="_00_00_0000">00 / 00 / 0000</string>
    <string name="get_profile">Get profile</string>
    <string name="add_new_profile">add new profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="edit">edit</string>
    <string name="update">update</string>
    <string name="capture_data">capture data</string>
    <string name="display_data">display data</string>
    <string name="profile_data_cards">Profile Data Cards</string>
    <string name="candidate_name">Candidate Name</string>
    <string name="candidate_phone">Candidate phone</string>
    <string name="candidate_email">Candidate Email</string>
    <string name="save_to_text_file">Save to text file</string>
    <string name="share_data_file">share data file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_compressor">Image Compressor</string>
    <string name="select_image">Select image</string>
    <string name="compress_image">Compress image</string>
    <string name="size">size</string>
    <string name="start">Start</string>
    <string name="multi_threading_sample">Multi threading sample</string>
    <string name="native_image_compressor">Native Image Compressor</string>
    <string name="log_in">log in</string>
    <string name="sign_up">sign up</string>
    <string name="chat_box">Chat box</string>
    <string name="log_out">Log out</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_sent_message">This is sent message</string>
    <string name="create_new_contact">create new contact</string>
    <string name="menu">menu</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="exit">exit</string>
    <string name="sort">sort</string>
    <string name="unsort">Unsort</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp_here">Enter OTP here</string>
    <string name="verify_and_signin">Verify and Signin</string>
    <string name="aapoon_login_ui">Aapoon Login UI</string>
    <string name="app_logo">app logo</string>
    <string name="i_m_a_business_user">I\'m a Business User</string>
    <string name="i_m_an_individual_user">I\'m an Individual User</string>
    <string name="btn_continue">continue</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="completed">Completed, Thank You !</string>
    <string name="verify_me">Verify me</string>
    <string name="profile_name">Profile Name</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="refer_a_friend">Refer a Friend</string>
</resources>