<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JobScheduler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constraints"
            android:layout_margin="15dp"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/connectivity"
                    android:layout_marginEnd="10dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_checkbox_any"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/any"/>

                    <RadioButton
                        android:id="@+id/btn_checkbox_unmetered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unmetered"/>

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="17sp"
                    android:text="@string/delay"/>

                <EditText
                    android:id="@+id/delay_time"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:inputType="number"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deadline"
                    android:textSize="17sp"/>

                <EditText
                    android:id="@+id/deadline_time"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:inputType="number"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charging_caption"
                    android:layout_marginEnd="15dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox_charging"
                    android:text="@string/charging"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idle_caption"
                    android:layout_marginEnd="15dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox_idle"
                    android:text="@string/requires_device_in_idle_mode"/>
            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/schedule_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/schedule_job"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/cancel_all"/>
    </LinearLayout>

</ScrollView>