<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".contacts.SendMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="140dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/message_edit_text"
            android:inputType="text"
            android:hint="@string/type_your_message_here"
            tools:ignore="LabelFor"
            style="@style/style_edit_text"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/contacts_edit_text" android:inputType="textPhonetic"
            android:hint="@string/add_contact_s"
            tools:ignore="LabelFor"
            style="@style/style_edit_text"
            android:autofillHints="no" />

        <Button
            android:id="@+id/btn_add_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_contacts" />

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/btn_contacts_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/contact_viewer" />

    </LinearLayout>
</RelativeLayout>