<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".tabProfile.ContactsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/fragment_message_edit_text"
            style="@style/style_edit_text"
            android:hint="@string/type_your_message_here"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/fragment_contacts_edit_text"
            style="@style/style_edit_text"
            android:autofillHints="no"
            android:hint="@string/add_contact_s"
            android:inputType="textPhonetic"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_fragment_add_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_contacts" />

        <Button
            android:id="@+id/btn_fragment_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/send" />

        <Button
            android:id="@+id/btn_fragment_contacts_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/contact_viewer" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>